--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mongoose": "^5.11.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-nice-dates": "^3.0.7",
