--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.8",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-nice-dates": "^3.0.7",
+    "react-rounded-image": "^2.0.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
